--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <title>Menu Indicator</title>
 </head>
 <body>
-    <nav>
+    <nav class="navigation">
         <ul>
             <li class="list">
                 <a href="#">
-                    <span class="icon">
+                    <span class="icon active">
                         <ion-icon name="home-outline"></ion-icon>
                     </span>
                     <span class="text">Home</span>
@@ -53,6 +53,7 @@
                     <span class="text">Settings</span>
                 </a>
             </li>
+            <div class="indicator"></div>
         </ul>
     </nav>
 
