--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="scrpits.js">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="./js/scrpits.js"> -->
 
     <title>Menu Indicator</title>
 </head>
 <body>
     <nav class="navigation">
         <ul>
-            <li class="list">
+            <li class="list active">
                 <a href="#">
-                    <span class="icon active">
+                    <span class="icon">
                         <ion-icon name="home-outline"></ion-icon>
                     </span>
                     <span class="text">Home</span>
@@ -56,7 +56,18 @@
             <div class="indicator"></div>
         </ul>
     </nav>
+    <script>
+        const list = document.querySelectorAll('.list');
 
+        function activeLink(){
+            list.forEach((item) =>
+            item.classList.remove('active'));
+            this.classList.add('active')
+        }
+
+        list.forEach((item) =>
+        item.addEventListener('click', activeLink));
+    </script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
